--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,10 @@ jobs:
           folder: azure-vote
           branch: master
           tag: ${{ github.sha }}
+  deployment:
+    runs-on: ubuntu-latest
+    environment: production
+    steps:
       - name: Azure login
         id: login
         uses: azure/login@v1.4.3
