--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,35 +27,35 @@ jobs:
         with:
           name: manifest
           path: azure-vote-all-in-one-redis.yaml
-  deployment:
-    runs-on: ubuntu-latest
-    environment: production
-    needs: build
-    steps:
-      - name: Download manifest
-        uses: actions/download-artifact@v2
-        with:
-          name: manifest
-      - name: Azure login
-        id: login
-        uses: azure/login@v1.4.3
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-      - name: Set AKS context
-        id: set-context
-        uses: azure/aks-set-context@v3
-        with:
-          resource-group: '${{ secrets.resource_group }}' 
-          cluster-name: '${{ secrets.cluster_name }}'
-      - name: Setup kubectl
-        id: install-kubectl
-        uses: azure/setup-kubectl@v3
-      - name: Deploy to AKS
-        id: deploy-aks
-        uses: Azure/k8s-deploy@v4
-        with:
-          namespace: 'default'
-          manifests: |
-             azure-vote-all-in-one-redis.yaml
-          images: '${{ secrets.registry }}.azurecr.io/${{ secrets.repository }}/azure-vote-front:${{ github.sha }}'
-          pull-images: false
+  # deployment:
+  #   runs-on: ubuntu-latest
+  #   environment: production
+  #   needs: build
+  #   steps:
+  #     - name: Download manifest
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: manifest
+  #     - name: Azure login
+  #       id: login
+  #       uses: azure/login@v1.4.3
+  #       with:
+  #         creds: ${{ secrets.AZURE_CREDENTIALS }}
+  #     - name: Set AKS context
+  #       id: set-context
+  #       uses: azure/aks-set-context@v3
+  #       with:
+  #         resource-group: '${{ secrets.resource_group }}' 
+  #         cluster-name: '${{ secrets.cluster_name }}'
+  #     - name: Setup kubectl
+  #       id: install-kubectl
+  #       uses: azure/setup-kubectl@v3
+  #     - name: Deploy to AKS
+  #       id: deploy-aks
+  #       uses: Azure/k8s-deploy@v4
+  #       with:
+  #         namespace: 'default'
+  #         manifests: |
+  #            azure-vote-all-in-one-redis.yaml
+  #         images: '${{ secrets.registry }}.azurecr.io/${{ secrets.repository }}/azure-vote-front:${{ github.sha }}'
+  #         pull-images: false
